gh-3136 Merge TestFormatDate and TestFormatDate2